2008-11-07  David Teller  <David.Teller@univ-orleans.fr>

	* src/libs/camlzip/gZip.ml: tweaked error message

	* src/libs/camlzip/gZip.ml*: [with_in], [with_out] added

	* src/libs/common/compress.ml*: [with_in], [with_out] added

	* src/core/extlib/IO.ml: [write_enum] added

	* src/core/extlib/IO.ml: occurrences of [Enum.iter] replaced with [write_enum]

	* src/core/extlib/innerIO.ml: [close_out] now calls [flush]

	* src/core/extlib/innerIO.ml: [create_out] now won't automatically call [flush]

	* src/libs/camlzip/gZip.mli: added hyperlinks into comments

	* batteries.godiva (Depends): added [godi-zip]

	* src/libs/camlzip/_tags: added [pkg_camlzip]

	* src/batteries_toolchain/top.ml: added [open Batteries], [!] before [Sys.interactive]
	

2008-11-06  David Teller  <David.Teller@univ-orleans.fr>

	* doc/batteries/html/toplevel.html: added more documentation

	* doc/batteries/html/style.css: added class [code.example]

	* src/batteries_toolchain/top.ml: now checks for interactivity

	* src/core/extlib/pSet.ml*: [print] added

	* src/core/extlib/pMap.ml*: [print] added

	* src/core/extlib/extSet.ml*: created

	* src/core/extlib/extHashtbl.mli: fixed documentation typo

	* src/core/extlib/extStack.ml*: created

	* src/core/extlib/extQueue.ml*: created

	* src/core/batteries_core.ml: [Queue] is now [Extlib.ExtQueue.Queue]

	* src/core/extlib.mlpack: [ExtMap], [ExtQueue], [ExtStack] added

	* src/core/batteries_core.ml: module [Map] is now [Extlib.ExtMap.Map]

	* src/main/threads/batteries.mllib: removed [Batlib_baselib_Gc], [Batlib_baselib_Unix], [Map]

	* src/main/nothreads/batteries.mllib: removed [Batlib_baselib_Gc], [Batlib_baselib_Unix], [Map]

	* src/core/extlib_threads/extUnixThreads.ml: replaced [Std] with [Extlib.Std]

	* tests/Makefile: targets [all], [byte], [opt] removed, targets [bytelib] and [optlib] added
	
	* src/batteries_toolchain/batteries_help.ml: occurrences of [Batteries_config] replaced with [Toolchain.Sysconfig]
